--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
   justify-content: center;
   align-items: flex-start;
   height: 100%;
+  zoom: 80%;
 }
 
 button {
@@ -28,7 +29,7 @@ button {
   padding: 10px;
   color: rgba(160, 159, 160, 1);
   font-size: 26px;
-  font-family: sans-serif;
+  
   display: flex;
   justify-content: space-between;
 }
@@ -50,6 +51,7 @@ button {
   display: flex;
   color: white;
   font-size: 20px;
+
 }
 
 
@@ -75,9 +77,9 @@ button {
   height: 100px;
   cursor: pointer;
   box-sizing: border-box;
-  background-color: #120f0f;
+  background-color: #3d3838;
   margin: 5px;
-  box-shadow: 0px 0px 3px #cfbc14;
+  box-shadow: 0px 0px 3px #FFD700;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -85,26 +87,29 @@ button {
   border-color: white;
   color: white;
   font-size: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+ 
+  
 }
 
 
 .day:hover {
-  background-color: #cfbc14;
+  background-color:#FFD700;
 }
 
 .day+#currentDay {
-  background-color: #554d1f;
+  background-color: 	#222020;
+  box-shadow:3px 3px 0px #FFD700;
 
 }
 
 .event {
-  font-size: 10px;
   padding: 3px;
-  background-color: #ae8c78;
+  background-color: red;
   color: white;
-  border-radius: 5px;
+  border-radius: 0px;
   max-height: 55px;
+ 
+ border-radius:2px;
   overflow: hidden;
 }
 
@@ -119,13 +124,16 @@ button {
   display: none;
   z-index: 20;
   padding: 25px;
-  background-color: #807979;
-  box-shadow: 0px 0px 3px rgb(237, 227, 227);
+  background-color: #131010;
+  border: 2px solid rgb(233, 225, 225);
+
   border-radius: 5px;
   width: 350px;
   top: 100px;
   left: calc(50% - 175px);
   position: absolute;
+
+
 
 }
 
@@ -140,6 +148,7 @@ button {
   box-shadow: 0px 0px 3px gray;
   background-color: white;
   border-radius: 0.2cm;
+  
 }
 
 #eventCountryInput {
@@ -152,6 +161,7 @@ button {
   border: none;
   box-shadow: 0px 0px 3px gray;
   border-radius: 0.2cm;
+  
 }
 
 #eventLocationName {
@@ -164,6 +174,7 @@ button {
   border: none;
   box-shadow: 0px 0px 3px gray;
   border-radius: 0.2cm;
+  
 }
 
 #eventCityInput {
@@ -176,6 +187,7 @@ button {
   border: none;
   box-shadow: 0px 0px 3px gray;
   border-radius: 0.2cm;
+
 }
 
 #timePicker {
@@ -189,6 +201,7 @@ button {
   box-shadow: 0px 0px 3px gray;
   text-align: center;
   border-radius: 0.2cm;
+  
 }
 
 #types {
@@ -202,6 +215,7 @@ button {
   box-shadow: 0px 0px 3px gray;
   text-align: center;
   border-radius: 0.2cm;
+ 
 
 
 }
@@ -236,7 +250,7 @@ button {
   background-color: #d85e17;
 }
 
-#addEvents {
+/* #addEvents {
   display: none;
   z-index: 20;
   padding: 25px;
@@ -249,7 +263,7 @@ button {
   position: absolute;
   font-family: sans-serif;
 
-}
+} */
 
 #eventText {
   font-size: 14px;
@@ -269,7 +283,7 @@ button {
 /* Styling for Event Summary */
 
 #eventSummary {
-  border: solid white 2px;
+  /*border: solid white 2px;*/
   border-radius: 20px;
   width: 70%;
   text-align: center;
@@ -278,14 +292,21 @@ button {
   overflow-y: scroll;
   margin-left: 15px;
   margin-right: 10px;
+  color:white;
+  
+  
 }
 
 #event-list {
   list-style: none;
 }
 
+
+
+
 .list-item {
   display: flex;
+  
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
@@ -293,28 +314,32 @@ button {
   margin: 10px;
   padding: 10px;
   border-radius: 20px;
-  height: 100px;
+  height: 60px;
+ 
   color: black;
-  background-color: #ffffffac;
+  background-color: #3d3838;
+  border-color:#FFD700;
+ 
 
 }
 
 .text-div {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 20px;
+  justify-content: space-evenly;
+  font-size: 30px;
   font-weight: bold;
   line-height: 2px;
-  font-family: Arial, Helvetica, sans-serif;
+  gap: 1em;
+  color:white;
+ 
+  
 }
 
 .list-btn {
   padding: 10px;
-  width: 60px;
-  height: 60px;
-  background-image: url("./trash.svg");
+  width: 30px;
+  height: 40px;
+  background-image: url("./trash.png");
   background-repeat: no-repeat;
   background-size: 60px;
   cursor: pointer;
